# my-own-cpp-engine

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  main.cpp
src/: input.hpp
src/core/: AABB.cpp  AABB.hpp  Animation.cpp  Animation.hpp  Audio.cpp  Audio.hpp  Engine.cpp  Engine.hpp  Hitbox.cpp  Hitbox.hpp  Object_2d.cpp  Object_2d.hpp  Physics.cpp  Physics.hpp  Player.cpp  Player.hpp  RigidBody.cpp  RigidBody.hpp  ScreenMenu.cpp  ScreenMenu.hpp  ScreenText.cpp  ScreenText.hpp  vector.cpp  vector.hpp
